[ENG-17299] Fix tawk overlap lead form (#1922)

--- a/src/components/RequestQuotePage/TellUsForm/TellUsForm.scss
+++ b/src/components/RequestQuotePage/TellUsForm/TellUsForm.scss
@@ -10,6 +10,9 @@
     }
   }
 
+  $tawk-z-index: 2000000000;
+  z-index: $tawk-z-index + 1;
+  position: relative;
   display: flex;
   background-color: $gray-5;
   flex-flow: column;
